--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,155 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+:root {
+  --primColor: #dcdcdc;
+  --secoColor: #555555;
+  --cornerRad: 4px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  body {
+  background-color: var(--primColor);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  }
+  details {
+  margin: 40px;
+  }
+  summary {
+  writing-mode: vertical-lr;
+  text-align: center;
+  padding: 12px 10px;
+  width: 1.8vw;
+  height: 1.8vw;
+  background-color: var(--primColor);
+  border: 2px solid var(--secoColor);
+  border-radius: var(--cornerRad);
+  color: var(--secoColor);
+  cursor: pointer;
+  user-select: none;
+  outline: none;
+  transition: transform 200ms ease-in-out 0s;
+  }
+  @media screen and (max-width: 800px) {
+      summary {
+          width: 3vw;
+          height: 3vw;
+      }
+    }
+  
+  @media screen and (max-width: 500px) {
+      summary {
+          width: 6vw;
+          height: 6vw;
+      }
+    }
+  @media screen and (max-width: 250px) {
+      summary {
+          width: 12vw;
+          height: 12vw;
+      }
+    }
+  summary::before,
+  summary::after {
+  position: static;
+  top: 0;
+  left: 0;
+  }
+  summary::before {
+  content: "";
+  }
+  summary::after {
+  content: "III";
+  letter-spacing: -1px;
+  }
+  summary:hover {
+  transform: scale(1.1);
+  }
+  summary::marker {
+  font-size: 0vw;
+  }
+  summary::-webkit-details-marker {
+  display: none;
+  }
+  details[open] .menu {
+  animation-name: menuAnim;
+  }
+  details[open] summary::before {
+  content: "X";
+  }
+  details[open] summary::after {
+  content: "";
+  }
+  .menu {
+  height: 0;
+  width: fit-content;
+  height: 150px;
+  border-radius: var(--cornerRad);
+  background-color: var(--primColor);
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
+  margin-top: 8px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  justify-content: space-between;
+  overflow: hidden;
+  animation: closeMenu 300ms ease-in-out forwards;
   }
-  to {
-    transform: rotate(360deg);
+  .menu a {
+  padding: 12px 24px;
+  margin: 0 16px;
+  color: var(--secoColor);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+  text-align: center;
+  transition: filter 200ms linear 0s;
   }
-}
+  .menu a:nth-of-type(1) {
+  padding-top: 24px;
+  }
+  .menu a:nth-last-of-type(1) {
+  border-bottom: none;
+  }
+  .menu a:hover {
+  filter: brightness(200%);
+  }
+  details::before {
+  content: "Click to open Menu";
+  color: var(--secoColor);
+  position: absolute;
+  margin-left: 80px;
+  padding: 10px 10px;
+  opacity: 0.4;
+  }
+  details[open]::before {
+  animation: fadeMe 300ms linear forwards;
+  }
+  @keyframes menuAnim {
+  0% {
+      height: 0;
+  }
+  100% {
+      height: 220px;
+  }
+  }
+  @keyframes fadeMe {
+  0% {
+      opacity: 0.4;
+  }
+  100% {
+      opacity: 0;
+  }
+  }
+  
+  .page--title {
+      text-align: center;
+      margin-top: 10%;
+      margin-bottom: 3%;
+  }
+  
+  .content {
+      font-size: 29px;
+      max-width: 80%;
+      margin-left: 10%;
+  }
+  
+  .home--content {
+      text-align: center;
+      font-size: 35px;
+      margin-top: 10%;
+  }
